--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "14.1.2",
     "react-is": "18.3.1",
     "recharts": "2.12.7",
+    "serverless-http": "^4.0.0",
     "sonner": "1.5.0"
   },
   "devDependencies": {
