--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,8 @@
   functions = "netlify/functions"
 
 [functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["express", "serverless-http", "pg", "cors", "body-parser"]
   environment = { NETLIFY = "true" }
 
 [[redirects]]
